[tool.poetry]
name = "homework"
version = "0.1.0"
description = ""
authors = ["Зубайраева Ольга <vadelevich2013@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
do_homework = 'homework.home:main'
